--- a/wsgiadmin/m/style/style.css
+++ b/wsgiadmin/m/style/style.css
@@ -574,19 +574,19 @@ a:hover {
 	-moz-border-radius: 6px;
 	border-radius: 6px;
 }
-#notifications li#error {
+#notifications li.error {
 	background: #fdd1d1 url(/m/images/ico-error.png) no-repeat 20px 10px !important;
 	border: solid 1px #dc8787;
 }
-#notifications li#info {
+#notifications li.info {
 	background: #dde4fe url(/m/images/ico-info.png) no-repeat 20px 10px  !important;
 	border: solid 1px #94a8e8;
 }
-#notifications li#warning {
+#notifications li.warning {
 	background: #fefbd4 url(/m/images/ico-upozorneni.png) no-repeat 20px 10px  !important;
 	border: solid 1px #e6db54;
 }
-#notifications li#ok {
+#notifications li.success {
 	background: url(/m/images/ico-ok.png) no-repeat 20px 10px  #d8fed1 !important;
 	border: solid 1px #8ad17f;
 }
